--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,11 @@ html { font-family: 'Open Sans', sans-serif; }
   max-width: 970px;
   padding: 20px;
 }
+
+button {
+  background: #20558a;
+  color: white;
+  padding: 15px 30px;
+  border: 1px solid black;
+  outline: 0;
+}
